# forge-backend

./: .dockerignore  .env.example  .env.production.example  .gitignore  .gitleaksignore  D11_CI_CLEANUP_COMPLETE.md  D11_FAILURE_EXPLICITNESS_COMPLETE.md  D11_MANUAL_VERIFICATION.md  D12A_COMPLETE.md  D8_ACCEPTANCE_HARDENING_COMPLETE.md  D8_ACCEPTANCE_HARDENING_PARTIAL.md  Dockerfile  INTEGRITY_REPORT.md  Makefile  README.md  apprunner.yaml  forge.db  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  start-backend.bat  start-backend.sh  start-server.bat  start-server.ps1  start.bat
.github/workflows/: ci.yml
data/: chat_messages.json  chat_sessions.json  config.json  forge_artifacts.json  forge_missions.json  forge_reports.json  forge_runs.json  forge_skills.json  forge_system_status.json  jobs.json  mission_reports.json  orunmila_cycle4w_state.json  orunmila_daily_state.json  orunmila_missions.json  orunmila_reports.json  orunmila_runs.json  orunmila_skills.json  orunmila_structural_state.json
data/leto_blrm_runs_test/: runs.csv  (+3 more)
forge/: app.py
leto_blrm/: README.md  __init__.py  config.py  core.py  io.py  runner.py
orunmila/: __init__.py  leto_mindset.yaml
scripts/: __init__.py  populate_mock_data.py  prove_cockpit_v2_operational.py  run_leto_blrm_with_jobs.py  test_telegram_integration.py
src/: __init__.py  config.py  console_chat_store.py  job_commands.py  job_store.py  main.py  schemas.py  schemas.py.bak  storage.py
state/: corridor_status.json  presence_state.json
tests/: _legacy_test_acceptance_v2_http.py  conftest.py  test_acceptance_v2_direct.py  test_d11_failure_explicitness.py  test_d12a_read_endpoints.py  test_leto_blrm_basic.py  test_orunmila_events.py
(+58 files in other folders)
